syntax = "proto3";

option go_package = "./eCommerce";

// protos common.proto filedan import qilindi
import "protos/common.proto";
import "protos/product.proto";


// The service definition.
service OrderService {
    rpc Ping (Empty) returns (Pong) {}
    rpc CreateOrder (CreateOrderRequest) returns (Order) {}
    rpc UpdateOrder (UpdateOrderRequest) returns (Order) {}
    rpc DeleteOrder (DeleteOrderRequest) returns (Order) {}
    rpc GetOrderList (GetOrderListRequest) returns (GetOrderListResponse) {}
    rpc GetOrderById (GetOrderByIDRequest) returns (GetOrderByIDResponse) {} 
    // rpc GetOrderFullInfoById (GetOrderFullInfoByIDRequest) returns (GetOrderFullInfoByIDResponse) {} 

}

// Order ...
message Order { 
    string id = 1;
    string product_id = 2;
    string client_id = 3;
    int32 count = 4;
    string created_at = 5;
    string updated_at = 6;
}

message CreateOrderRequest{
    string product_id = 1;
    string client_id = 2;
    int32 count = 3;
}


message UpdateOrderRequest{
    string id =1;
    int32 count = 2;
}

message DeleteOrderRequest{
    string id = 1;
}

message GetOrderListRequest{
    int32 offset = 1;
    int32 limit = 2;
}
message GetOrderListResponse{
    repeated Order orders = 1;
}

message GetOrderByIDRequest{
    string id =1;
}

message GetOrderByIDResponse {
    string id = 1;
    string product_id = 2;
    Product product =3;
    string client_id = 4;
    string client_username = 5;
    int32 count = 6;
    string created_at = 7;
    string updated_at = 8;
}
