syntax = "proto3";

option go_package = "./eCommerce";

// protos common.proto filedan import qilindi
import "protos/common.proto";
import "protos/product.proto";
import "protos/client.proto";


// The service definition.
service OrderItemService {
    rpc Ping (Empty) returns (Pong) {}
    rpc CreateOrderItem (CreateOrderItemRequest) returns (Empty) {}
    rpc UpdateOrder (UpdateOrderItemRequest) returns (Empty) {}
    rpc DeleteOrderItem (DeleteOrderItemRequest) returns (Empty) {}
    rpc GetOrderItemList (GetOrderItemListRequest) returns (GetOrderItemListResponse) {}
    rpc GetOrderItemById (GetOrderItemByIDRequest) returns (OrderItem) {} 
}

// OrderItem ...
message OrderItem { 
    string id = 1;
    string oredr_id =2 ;
    Product productInfo =3;
    Client clientInfo =4;
    string totalPrice = 5;
    string created_at = 6;
    string updated_at = 7;
}

message CreateOrderItemRequest{
    string oredr_id =2 ;
    string totalPrice = 3;
}


message DeleteOrderItemRequest{
    string id = 1;
}

message GetOrderItemListRequest{
    int32 offset = 1;
    int32 limit = 2;
}
message GetOrderItemListResponse{
    repeated OrderItem orderItems = 1;

}

message GetOrderItemByIDRequest{
    string id =1;
}

message UpdateOrderItemRequest{
    string id =1;
    string order_id =2;
    string count = 3;
    string totalPrice = 4;
}